src/test/deca/context/valid/method_call_args_mixed.deca
// Test context, method call with int as parameters

class Test {
    float testMethod(float x, int y, boolean b) {
        if (b) {
            return x;
        }
        return (x + y);
    }
}

{
    int z;
    Test test = new Test();
    z = test.testMethod(5,12);
}