src/test/deca/context/invalid/or_expr_three_operands.deca
// Test context, or avec 3 conditions

{
  boolean x, y, z;
  int b;
  if (x || y || z) {
    b = 5;
  }
}
